Fix VRF key resolution at period boundary (#61)
* sign with scalar

* Resolve a generator's VRF key in the block's own period

PoSSelector resolved the VRF key at the parent's height while the appender
admits a generator from the new block's period. The two agree everywhere but
the first block of a period, which is exactly where a committee changes: the
incoming committee is told it is allowed to generate and then that it is not a
committed generator of the outgoing period, while the outgoing one is barred
outright, so the chain stalls at the boundary with no block appendable by
anyone.

Resolve the key at parentHeight + 1 in validateGenerationSignature and
validateBlockDelay, and in testkit's Domain.processBlock, which mirrored the
same off-by-one. The hit source still comes from the parent.

Test genesis blocks that committed the first block's generator on both sides of
the boundary were working around this and no longer need to. The conflict
endorser suites mined into a period nobody had committed to, which the
off-by-one let through for exactly one block; they now commit for it.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_019NCMKUTy274fWhD3rephYx